--- a/index.ipynb
+++ b/index.ipynb
@@ -42,7 +42,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\"\"\"\n",
+    "SELECT name, salary\n",
+    "FROM employee\n",
+    "ORDER BY salary DESC\n",
+    "LIMIT 5;\n",
+    "\"\"\" "
    ]
   },
   {
@@ -80,11 +86,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nSELECT a.author_name, SUM(copies_sold) AS total_books_sold\\nFROM authors a\\nJOIN books b\\nON a.book_name = b_name\\nGROUP BY a.author_name\\nORDER BY total_books_sold DESC\\nLIMIT 3\\n;\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\"\"\"\n",
+    "SELECT a.author_name, SUM(copies_sold) AS total_books_sold\n",
+    "FROM authors a\n",
+    "JOIN books b\n",
+    "ON a.book_name = b_name\n",
+    "GROUP BY a.author_name\n",
+    "ORDER BY total_books_sold DESC\n",
+    "LIMIT 3;\n",
+    "\"\"\" "
    ]
   },
   {
@@ -104,7 +130,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\"\"\"\n",
+    "SELECT c.name, COUNT(DISTINCT o.OrderDate) as NumOrderDates \n",
+    "FROM (SELECT c.name, o.quantity FROM Customers c \n",
+    "    JOIN Orders o ON c.orderNumber = o.OrderNumber\n",
+    "    WHERE o.quantity > 1)\n",
+    "WHERE NumOrderDates > 1\n",
+    "\"\"\""
    ]
   },
   {
@@ -141,7 +174,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\"\"\"\n",
+    "SELECT d.Name, COUNT(e.ID) as num_employees\n",
+    "FROM Department d\n",
+    "\n",
+    "LEFT JOIN Employee e\n",
+    "USING (dept_ID)\n",
+    "\n",
+    "GROUP BY d.Name, d.dept_ID\n",
+    "ORDER BY d.Name, num_employees DESC;\n",
+    "\"\"\" "
    ]
   },
   {
@@ -156,7 +199,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -170,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
